--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -10,3 +10,89 @@ body {
     color-scheme: dark;
   }
 }
+
+.btn-verde1{
+  @apply bg-green-600 text-white font-bold py-2 px-4 rounded-md;
+}
+.btn-verde1-vazado{
+ @apply bg-transparent text-green-600 font-bold py-2 px-4 rounded-md border-2 border-green-600;
+}
+
+.btn-verde1-claro{
+@apply bg-green-200 text-black font-bold py-2 px-4 rounded-md;
+}
+
+.btnr-verde1{
+  @apply bg-green-600 text-white font-bold py-2 px-8 rounded-full;
+}
+
+.btnr-verde1-vazado{
+  @apply bg-transparent text-green-600 font-bold py-2 px-8 rounded-full border-2 border-green-600;
+ }
+ 
+ .btnr-verde1-claro{
+ @apply bg-green-200 text-black font-bold py-2 px-8 rounded-full;
+ }
+
+.btn-azul1 {
+  @apply bg-blue-600 text-white font-bold py-2 px-4 rounded-md;
+}
+.btn-azul1-vazado {
+  @apply bg-transparent text-blue-600 font-bold py-2 px-4 rounded-md border-2 border-blue-600;
+}
+.btn-azul1-claro {
+  @apply bg-blue-200 text-black font-bold py-2 px-4 rounded-md;
+}
+
+.btn-vermelho1 {
+  @apply bg-red-600 text-white font-bold py-2 px-4 rounded-md;
+}
+.btn-vermelho1-vazado {
+  @apply bg-transparent text-red-600 font-bold py-2 px-4 rounded-md border-2 border-red-600;
+}
+.btn-vermelho1-claro {
+  @apply bg-red-200 text-black font-bold py-2 px-4 rounded-md;
+}
+
+.btn-limao1 {
+  @apply bg-lime-600 text-white font-bold py-2 px-4 rounded-md;
+}
+.btn-limao1-vazado {
+  @apply bg-transparent text-lime-600 font-bold py-2 px-4 rounded-md border-2 border-lime-600;
+}
+.btn-limao1-claro {
+  @apply bg-lime-200 text-black font-bold py-2 px-4 rounded-md;
+}
+
+/* Botões arredondados (btnr) para verde-limão */
+.btnr-limao1 {
+  @apply bg-lime-600 text-white font-bold py-2 px-8 rounded-full;
+}
+.btnr-limao1-vazado {
+  @apply bg-transparent text-lime-600 font-bold py-2 px-8 rounded-full border-2 border-lime-600;
+}
+.btnr-limao1-claro {
+  @apply bg-lime-200 text-black font-bold py-2 px-8 rounded-full;
+}
+
+/* Botões arredondados (btnr) para azul */
+.btnr-azul1 {
+  @apply bg-blue-600 text-white font-bold py-2 px-8 rounded-full;
+}
+.btnr-azul1-vazado {
+  @apply bg-transparent text-blue-600 font-bold py-2 px-8 rounded-full border-2 border-blue-600;
+}
+.btnr-azul1-claro {
+  @apply bg-blue-200 text-black font-bold py-2 px-8 rounded-full;
+}
+
+/* Botões arredondados (btnr) para vermelho */
+.btnr-vermelho1 {
+  @apply bg-red-600 text-white font-bold py-2 px-8 rounded-full;
+}
+.btnr-vermelho1-vazado {
+  @apply bg-transparent text-red-600 font-bold py-2 px-8 rounded-full border-2 border-red-600;
+}
+.btnr-vermelho1-claro {
+  @apply bg-red-200 text-black font-bold py-2 px-8 rounded-full;
+}
