Componente Ranking e atualização das variáveis e classes do Tailwind

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -11,59 +11,86 @@ body {
   }
 }
 
-.title{
-  @apply text-2xl font-bold text-black dark:text-white;
+.h1 {
+  @apply text-2xl font-montserrat text-black dark:text-white;
 }
 
-.btn-verde1{
-  @apply bg-green-600 text-white font-bold py-2 px-4 rounded-md;
+.btn-verde1 {
+  @apply bg-verde1 text-white font-montserrat font-bold py-2 px-4 rounded-md;
 }
-.btn-verde1-vazado{
- @apply bg-transparent text-green-600 font-bold py-2 px-4 rounded-md border-2 border-green-600;
+.btn-verde1-vazado {
+  @apply bg-transparent text-verde1 font-montserrat font-bold py-2 px-4 rounded-md border-2 border-verde1;
 }
-
-.btn-verde1-claro{
-@apply bg-green-200 text-black font-bold py-2 px-4 rounded-md;
-}
-
-.btnr-verde1{
-  @apply bg-green-600 text-white font-bold py-2 px-8 rounded-full;
+.btn-verde1-claro {
+  @apply bg-verde1-claro text-black font-montserrat font-bold py-2 px-4 rounded-md;
 }
 
-.btnr-verde1-vazado{
-  @apply bg-transparent text-green-600 font-bold py-2 px-8 rounded-full border-2 border-green-600;
- }
- 
- .btnr-verde1-claro{
- @apply bg-green-200 text-black font-bold py-2 px-8 rounded-full;
- }
-
-.btn-azul1 {
-  @apply bg-blue-600 text-white font-bold py-2 px-4 rounded-md;
+.btnr-verde1 {
+  @apply bg-verde1 text-white font-montserrat font-bold py-2 px-8 rounded-full;
 }
-.btn-azul1-vazado {
-  @apply bg-transparent text-blue-600 font-bold py-2 px-4 rounded-md border-2 border-blue-600;
+.btnr-verde1-vazado {
+  @apply bg-transparent text-verde1 font-montserrat font-bold py-2 px-8 rounded-full border-2 border-verde1;
 }
-.btn-azul1-claro {
-  @apply bg-blue-200 text-black font-bold py-2 px-4 rounded-md;
+.btnr-verde1-claro {
+  @apply bg-verde1-claro text-black font-montserrat font-bold py-2 px-8 rounded-full;
 }
 
-.btn-vermelho1 {
-  @apply bg-red-600 text-white font-bold py-2 px-4 rounded-md;
+.btn-azul {
+  @apply bg-azul text-white font-montserrat font-bold py-2 px-4 rounded-md;
 }
-.btn-vermelho1-vazado {
-  @apply bg-transparent text-red-600 font-bold py-2 px-4 rounded-md border-2 border-red-600;
+.btn-azul-vazado {
+  @apply bg-transparent text-azul font-montserrat font-bold py-2 px-4 rounded-md border-2 border-azul;
 }
-.btn-vermelho1-claro {
-  @apply bg-red-200 text-black font-bold py-2 px-4 rounded-md;
+.btn-azul-claro {
+  @apply bg-azul-claro text-black font-montserrat font-bold py-2 px-4 rounded-md;
 }
 
-.btn-limao1 {
-  @apply bg-lime-600 text-white font-bold py-2 px-4 rounded-md;
+.btnr-azul {
+  @apply bg-azul text-white font-montserrat font-bold py-2 px-4 rounded-full;
 }
-.btn-limao1-vazado {
-  @apply bg-transparent text-lime-600 font-bold py-2 px-4 rounded-md border-2 border-lime-600;
+.btnr-azul-vazado {
+  @apply bg-transparent text-azul font-montserrat font-bold py-2 px-4 rounded-full border-2 border-azul;
 }
-.btn-limao1-claro {
-  @apply bg-lime-200 text-black font-bold py-2 px-4 rounded-md;
+.btnr-azul-claro {
+  @apply bg-azul-claro text-black font-montserrat font-bold py-2 px-4 rounded-full;
+}
+
+.btn-vermelho {
+  @apply bg-vermelho text-white font-montserrat font-bold py-2 px-4 rounded-md;
+}
+.btn-vermelho-vazado {
+  @apply bg-transparent text-vermelho font-montserrat font-bold py-2 px-4 rounded-md border-2 border-vermelho;
+}
+.btn-vermelho-claro {
+  @apply bg-vermelho-claro text-black font-montserrat font-bold py-2 px-4 rounded-md;
+}
+
+.btnr-vermelho {
+  @apply bg-vermelho text-white font-montserrat font-bold py-2 px-4 rounded-full;
+}
+.btnr-vermelho-vazado {
+  @apply bg-transparent text-vermelho font-montserrat font-bold py-2 px-4 rounded-full border-2 border-vermelho;
+}
+.btnr-vermelho-claro {
+  @apply bg-vermelho-claro text-black font-montserrat font-bold py-2 px-4 rounded-full;
+}
+
+.btn-limao {
+  @apply bg-limao text-white font-montserrat font-bold py-2 px-4 rounded-md;
+}
+.btn-limao-vazado {
+  @apply bg-transparent text-limao font-montserrat font-bold py-2 px-4 rounded-md border-2 border-limao;
+}
+.btn-limao-claro {
+  @apply bg-limao-claro text-black font-montserrat font-bold py-2 px-4 rounded-md;
+}
+
+.btnr-limao {
+  @apply bg-limao text-white font-montserrat font-bold py-2 px-4 rounded-full;
+}
+.btnr-limao-vazado {
+  @apply bg-transparent text-limao font-montserrat font-bold py-2 px-4 rounded-full border-2 border-limao;
+}
+.btnr-limao-claro {
+  @apply bg-limao-claro text-black font-montserrat font-bold py-2 px-4 rounded-full;
 }
